# chinese-tutor

./: .gitignore  CLAUDE.md  README.md  TODO.md  bkt.py  fsrs_scheduler.py  main.py  menu.py  models.py  pyproject.toml  scheduler.py  simulate.py  simulation_results.json  simulator_models.py  student_state.json
.github/workflows/: main.yml
data/: cloze_templates.json  grammar.json  minimal_pairs.json  tutor.db  vocabulary.json
exercises/: __init__.py  base.py  chinese_adapter.py  chinese_populator.py  chinese_to_english.py  cloze_deletion.py  config.py  english_to_chinese.py  generators.py  generic_handlers.py  generic_models.py  minimal_pair.py  populator.py  schemas.py  segmented_translation.py
plans/: fancy_terminal_ui.md  plan-declarative-adapters.md  plan-fsrs-rating-prompt.md  plan-init.md  plan-scheduling.md  plan-sigint-handler.md  plan-simulator.md  plan-sql-migration.md
scripts/: migrate_to_sqlite.py
specs/: scheduling-spec.md
storage/: __init__.py  adapters.py  base.py  connection.py  migrations.py  sqlite.py
tests/: __init__.py  conftest.py  test_bkt.py  test_chinese_to_english.py  test_cloze_deletion.py  test_dynamic_schema.py  test_english_to_chinese.py  test_fsrs_scheduler.py  test_integration_interactive.py  test_integration_simulator.py  test_menu.py  test_scheduler.py  test_storage.py
ui/: __init__.py  app.py  components.py  styles.py
